dotnet/gsf-sharp: rebuilt for 1.7
git-svn-id: https://cygwin-ports.svn.sourceforge.net/svnroot/cygwin-ports/ports/trunk@8691 e127d73d-b18e-4ae1-a744-a22e6a3ccd30

--- a/README
+++ b/README
@@ -3,25 +3,23 @@ gsf-sharp
 Mono C# bindings for the GNOME Structured File library
 
 Runtime requirements:
-  cygwin-1.5.24-2
-  glib-sharp2-2.10.0-1
-  glib2-2.12.9-1
-  libgsf114-1.14.2-1
-  mono-1.2.2.1-1
+  cygwin-1.7.1-1
+  libgcc1-4.3.4-3
+  libglib2.0_0-2.22.4-1
+  libgsf1_114-1.14.16-1
+  mono-2.4.3.1-1
+  mono-glib-sharp2.0-2.12.9-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.23-2
-  autoconf2.5-2.60-2
-  automake1.9-1.9.6-2
-  binutils-20060817-1
-  bison-2.3-1
-  cygport-0.2.7-1
-  flex-2.5.33-1
-  gawk-3.1.5-4
-  gcc-core-3.4.4-3
-  libtool1.5-1.5.23a-2
-  make-3.81-1
+  autoconf2.5-2.65-1
+  automake1.9-1.9.6-10
+  binutils-2.19.51-1
+  cygport-0.9.80-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-3
+  libtool-2.2.7a-15
+  make-3.81-2
   sed-4.1.5-2
 
 Canonical website:
@@ -41,33 +39,14 @@ Build instructions:
 
 This will create:
   /usr/src/gsf-sharp-0.8.1-X-src.tar.bz2
-  /usr/src/gsf-sharp-0.8.1-X.tar.bz2
+  /usr/src/mono-gsf-sharp0.0-0.8.1-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /usr/bin/cyggsfglue.dll
-  /usr/lib/libgsfglue.la
-  /usr/lib/mono/gac/gsf-sharp/0.0.0.7__35e10195dab3c99f/gsf-sharp.dll
-  /usr/lib/mono/gac/gsf-sharp/0.0.0.7__35e10195dab3c99f/gsf-sharp.dll.config
-  /usr/lib/mono/gtk-sharp/gsf-sharp.dll
-  /usr/lib/pkgconfig/gsf-sharp.pc
-  /usr/share/doc/Cygwin/gsf-sharp-0.8.1.README
-  /usr/share/doc/gsf-sharp-0.8.1/AUTHORS
-  /usr/share/doc/gsf-sharp-0.8.1/COPYING
-  /usr/share/doc/gsf-sharp-0.8.1/ChangeLog
-  /usr/share/doc/gsf-sharp-0.8.1/INSTALL
-  /usr/share/doc/gsf-sharp-0.8.1/NEWS
-  /usr/share/doc/gsf-sharp-0.8.1/README
-  /usr/share/gapi-2.0/gsf-api.xml
-
-------------------
-
 Port Notes:
 
------ version 0.8.1-1 -----
-Initial release for Cygwin.
+----- version 0.8.1-2 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
