--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Mono C# bindings for the GNOME Structured File library
 Runtime requirements:
   cygwin-1.7.1-1
   libgcc1-4.3.4-3
-  libglib2.0_0-2.22.4-1
+  libglib2.0_0-2.22.4-2
   libgsf1_114-1.14.16-1
   mono-2.4.3.1-1
   mono-glib-sharp2.0-2.12.9-1
@@ -44,6 +44,9 @@ This will create:
 -------------------------------------------
 
 Port Notes:
+
+----- version 0.8.1-3 -----
+Fixed VPATH build bug which caused API overrides to not be included.
 
 ----- version 0.8.1-2 -----
 Initial release for Cygwin 1.7.
